--- a/about.html
+++ b/about.html
@@ -25,11 +25,11 @@
         </div>
         <div class="sidebar">
             <ul>
-                <li onclick=hideSidebar()><a href="#"><i class="fa fa-times"></i></a></li>
+                <li onclick= hideSidebar()><a href="#"><i class="fa fa-times"></i></a></li>
                 <li><a href="home.html">Home</a></li>
                 <li><a href="our cources.html">All Cources</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact-us.html">Contact</a></li>
             </ul>
         </div>
 
