--- a/our cources.html
+++ b/our cources.html
@@ -26,10 +26,10 @@
         <div class="sidebar">
             <ul>
                 <li onclick= hideSidebar()><a href="#"><i class="fa fa-times"></i></a></li>
-                <li><a href="">Home</a></li>
-                <li><a href="">All Cources</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="our cources.html">All Cources</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact-us.html">Contact</a></li>
             </ul>
         </div>
     
