--- a/about.html
+++ b/about.html
@@ -12,11 +12,12 @@
 <body>
     <!-- ----------------------------navbar------------------- -->
 
-    <nav>
+    <section class="header">
+        <nav>
         <h2 class="logo">The divine Institute</h2>
         <div class="navlist">
             <ul>
-                <li class="hide-on-mobile"><a href="home.html">Home</a></li>
+                <li class="hide-on-mobile"><a href="index.html">Home</a></li>
                 <li class="hide-on-mobile"><a href="our cources.html">All Cources</a></li>
                 <li class="hide-on-mobile"><a href="about.html">About</a></li>
                 <li class="hide-on-mobile"><a href="contact-us.html">Contact</a></li>
@@ -26,13 +27,13 @@
         <div class="sidebar">
             <ul>
                 <li onclick= hideSidebar()><a href="#"><i class="fa fa-times"></i></a></li>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="our cources.html">All Cources</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact-us.html">Contact</a></li>
             </ul>
         </div>
-
+    
     </nav>
 
     <!-- ---------------------------main body------------------------ -->
