--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h2 class="logo">The divine Institute</h2>
         <div class="navlist">
             <ul>
-                <li class="hide-on-mobile"><a href="home.html">Home</a></li>
+                <li class="hide-on-mobile"><a href="index.html">Home</a></li>
                 <li class="hide-on-mobile"><a href="our cources.html">All Cources</a></li>
                 <li class="hide-on-mobile"><a href="about.html">About</a></li>
                 <li class="hide-on-mobile"><a href="contact-us.html">Contact</a></li>
@@ -31,7 +31,7 @@
         <div class="sidebar">
             <ul>
                 <li onclick= hideSidebar()><a href="#"><i class="fa fa-times"></i></a></li>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="our cources.html">All Cources</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact-us.html">Contact</a></li>
