--- a/contact-us.html
+++ b/contact-us.html
@@ -35,8 +35,28 @@
     </nav>
 
     <!-- ---------------------------main body------------------------ -->
-    <section class="background2">
-    </section>
+    <div class="contact-container">
+    <div class="contact-row">
+        <div class="col">
+            <img src="images/about (2).jpg" alt="">
+        </div>
+        <div class="col">
+            <div class="col-info">
+            <h1>Contact Us</h1>
+            <p>Got any Query or Question?</p>
+            <strong>Feel free to Contact us We would love to hear from you!</strong>
+            <div class="icon">
+                <i class="fa fa-facebook"></i> 
+                <i class="fa fa-instagram"></i> 
+                <i class="fa fa-twitter"></i> 
+                <i class="fa fa-linkedin"></i> 
+                </div>
+        </div>
+        </div>
+ 
+    </div>
+    
+
 <!-- ================================contact us ============================= -->
 
 <section class="location">
