--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         <div class="sidebar">
             <ul>
                 <li onclick= hideSidebar()><a href="#"><i class="fa fa-times"></i></a></li>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="our cources.html">All Cources</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact-us.html">Contact</a></li>
+                <li><a href="index.html"><i class="fa fa-home"></i></a><span>Home</span></li>
+                <li><a href="our cources.html"><i class="fa fa-graduation-cap"></i></a><span>Cource</span></li>
+                <li><a href="about.html"><i class="fa fa-question-circle"></i></a><span>About</span></li>
+                <li><a href="contact-us.html"><i class="fa fa-phone" ></i></a><span>Contact</span></li>
             </ul>
         </div>
     
