--- a/contact-us.html
+++ b/contact-us.html
@@ -25,14 +25,15 @@
         <div class="sidebar">
             <ul>
                 <li onclick= hideSidebar()><a href="#"><i class="fa fa-times"></i></a></li>
-                <li><a href="index.html"><i class="fa fa-home"></i></a><span>Home</span></li>
-                <li><a href="our cources.html"><i class="fa fa-graduation-cap"></i></a><span>Cource</span></li>
-                <li><a href="about.html"><i class="fa fa-question-circle"></i></a><span>About</span></li>
-                <li><a href="contact-us.html"><i class="fa fa-phone" ></i></a><span>Contact</span></li>
+                <li><a href="index.html"><i class="fa fa-home"></i><span>Home</span></a></li>
+                <li><a href="our cources.html"><i class="fa fa-graduation-cap"></i><span>Cource</span></a></li>
+                <li><a href="about.html"><i class="fa fa-question-circle"></i><span>About</span></a></li>
+                <li><a href="contact-us.html"><i class="fa fa-phone" ></i><span>Contact</span></a></li>
             </ul>
         </div>
     
     </nav>
+
 
     <!-- ---------------------------main body------------------------ -->
     <div class="contact-container">
